--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -1,10 +1,12 @@
 body
 {
-	background: url(./images/spiderman.png) no-repeat center center fixed; 
+/*	background: url(./images/spiderman.png) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
+	background-color: #800000;
+
 }
 .container
 {
